# bulkmail

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: answers.md  design.md  diagrams.md
src/: chain.rs  gas_price.rs  lib.rs  message.rs  nonce_manager.rs  priority_queue.rs  sender.rs  transaction.rs
