[package]
name = "happychain"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Smith <mail@tcry.pt>"]
description = "Transaction sending/management system"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
web3 = "0.18"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
chrono = "0.4"
futures = "0.3"
rand = "0.8"
hex = "0.4"
thiserror = "1.0.63"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[[bin]]
name = "happychain"
path = "src/bin/tm.rs"

[lib]
name = "happychain"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
