[package]
name = "bulkmail"
version = "0.1.0"
edition = "2021"
authors = ["Tyler Smith <mail@tcry.pt>"]
description = "Transaction sending system"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
chrono = "0.4"
futures = "0.3"
rand = "0.8"
hex = "0.4"
thiserror = "1.0.63"
secp256k1 = "0.20"
ethereum-types = "0.12"
alloy = { version = "0.9.2", features = ["full"] }
alloy-node-bindings = "0.2.1"
simple_logger = "5.0.0"


[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.39", features = ["full", "test-util"] }
mockall = "0.13"
jsonrpc-core = "18"

[[bin]]
name = "oracle"
path = "src/bin/oracle.rs"

[lib]
name = "bulkmail"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
